--- a/index.html
+++ b/index.html
@@ -4,14 +4,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>All About Me</title>
+    <title>Document</title>
 </head>
 <body>
-    <img alt="Me?" src="images/Haydenright.jpg" >
-    <h1>About Me</h1>
-    <h1>[Hayden Scaggs]</h1>
-    <h1>[no nickname]</h1>
-    <p>[Hi my name is Hayden Scaggs I live on the border of California and Oregon
-         I enjoy learning about abstract topics and their finer details and I'm majoring in Computer Science. I enjoy developing new hobbies or playing with my two dogs.]</p>
+    <h1>Welcome to WDD130 Web Projects</h1>
+<nav>
+  <a href="aboutme/index.html">About Me Page</a>             
+  <a href="wwr/index.html">White Water Rafting Website</a>
+  <a href="wwr/site-plan-rafting.html">White Water Rafting Siteplan</a>
+  <a href="positioning.html">Positioning Activity</a>
+  <a href="#">Personal Website</a>
+  <a href="#">Personal Siteplan</a>
+</nav>
 </body>
 </html>
