--- a/PSite/site-plan.html
+++ b/PSite/site-plan.html
@@ -123,31 +123,43 @@
       <h2>
         Content
       </h2>
-      <h3>Home page</h3>
+      <h3>Home page Example</h3>
       <p>
-        [Written copy for the home page here]
+        [One of the key features of this website is its character wikis. These wikis provide in-depth information about each character in different  games, including move lists, frame data, combos, strategies, and matchup advice. Whether you're a newcomer trying to learn the basics or an experienced player looking to optimize your gameplay, the character wikis on this website offer a wealth of knowledge that can help you master your favorite characters.]
       </p>
-      <p>Images for the Home page</p>
-        <img src="#" alt="image for homepage">
-        <img src="#" alt="image for homepage">
+      <p>Images Illustrating site intentions</p>
+        <img src="images/nago-cs-hit.png" alt="image for homepage">
+       
+        <img src="images/nago-cs-no-hit.png" alt="image for homepage">
 
       </ul>
-      <h3>[Page 2]</h3>
+      <h3>[Page 2 example]</h3>
       <p>
-        [Written copy for the Page 2 here]
+        [Visitors would expect the site to answer a variety of questions related to specific games. Here are some common questions that visitors might expect the site to address:What are the frame data and frame advantage for specific moves?]
+        [How do I improve my gameplay?]
+        [What are the move lists, combos, and strategies for a particular character?]
+        [Here are some common questions that visitors might expect the site to address:What are the frame data and frame advantage for specific moves?]
       </p>
-      <p>Images for the Page 2</p>
-        <img src="#" alt="image for page">
-        <img src="#" alt="image for page">
+      <p>Illustration of concepts or ideas used in this site</p>
+      [+90 Blood]
+        <img src="images/nagozara.png" alt="image for page">
+        [Blood Gauge increase and depletion is gradual, and the effects of multiple moves stack if additional moves are used before the effects of previous moves are finished. For example, using 214H into 623H in quick succession will fill the gauge by 180 points, even if the latter is used before the effect of the former is finished. This applies for gauge increases, gauge depletion and a mix of the two, which can be used to your advantage.]
+        <img src="images/nagokam.png" alt="image for page">
+        [+90 Blood]
 
       </ul>
-      <h3>[Page 3]</h3>
-      <p>
-        [Written copy for the Page 3 here]
-      </p>
-      <p>Images for the Page 3</p>
-        <img src="#" alt="image for page3">
-        <img src="#" alt="image for page3">
+      <h3>[Page 3 Example]</h3>
+      <h3>
+        [When The Blood Gauge Is High]
+      </h3>
+      <p>[At two Blood bars, the dynamic shifts completely. Nagoriyuki won’t be able to go for the same mix-ups due to the risk of entering Blood Rage. Instead, the goal is to use his enhanced sword normals, such as 5H
+
+
+
+
+        , to punish unsuccessful approach attempts. With one or more Blood bars, 5H has outstanding range and good speed, outranging even f.S. At two Blood bars it is a great tool to keep the opponent at bay</p>
+        <img src="images/nago5h.png" alt="image for page3">
+        <img src="images/nago2h.png" alt="image for page3">
 
       </ul>
       <hr>
