--- a/wwr/index.html
+++ b/wwr/index.html
@@ -15,7 +15,7 @@
             </a>
             <nav>
                 <a href="index.html">Home</a>
-                <a href="#">Page 02</a>
+                <a href="things-todo.html">Things To Do</a>
                 <a href="site-plan-rafting.html">Site Plan</a>
                 <a href="contactus.html">Contact Us</a>
             </nav>
