--- a/PSite/Page3.html
+++ b/PSite/Page3.html
@@ -14,36 +14,27 @@
             </a>
             <nav>
                 <a href="index.html">Home</a>
-                <a href="Page3.html">Page 3</a>
-                <a href="Page2.html">Page 2</a>
+                <a href="Page3.html">Info Hub</a>
+                <a href="Page2.html">Using Frame Data</a>
             </nav>
         </header>
-        <div class="title-home">
-            <h2>FRAME COUNTER</h2>
-            <p>This site displays frame data Visually display movement in time of an animation.</p>
-        </div><div class="home-grid">
-            <section class="info">
-                <h3>iorem</h3>   
-                <p>This site displays frame data Visually display movement in time of an animation.</p>
-                <ul>
-                    <li>The audience for this website would be for people to see information about key portions of certains frames.</li>
-                    <li>You can view key things like startup, active, and recovery</li>
-                </ul>
-            </section>
-
-
-
-            <section class="info">
-                <h3>CONTENT</h3>   
-                <img src="images/nago-cs-hit.png" alt="NAgo" >
-                <ul>
-                    <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod</li>
-                    <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod</li>
-                    <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod</li>
-                </ul>
-            </section>
-
-        </div>
+        <div class="home-card-container">
+            <div class="home-link home-grid--col3">
+            <div class="home-link__button"><a href="" title="">Overview</a></div>
+            <div class="home-link__button"><a href="" title="">Starter Guide</a></div>
+            <div class="home-link__button"><a href="" title="">Combos</a></div>
+            </div>
+            <div class="home-link home-grid--col3">
+            <div class="home-link__button"><a class="">Frame Data</a></div>
+            <div class="home-link__button"><a href="" title="Matchups">Matchups</a></div>
+            <div class="home-link__button"><a href="" title="Strategy">Strategy</a></div>
+            </div>
+            <div class="home-link home-grid--col3">
+            <div class="home-link__button"><a href="" title="">Resources</a></div>
+            <div class="home-link__button"><a href="" title="">Okizeme</a></div>
+            <div class="home-link__button"><a href="" title="">Counterstrategy</a></div>
+            </div>
+            </div>
         <footer>
             <p>FRAMECOUNTER &copy; 2023 - HAYDENSCAGGS</p>
             <p><a href="site-plan.html">Site Plan</a></p>
