--- a/PSite/index.html
+++ b/PSite/index.html
@@ -16,8 +16,8 @@
             </a>
             <nav>
                 <a href="index.html">Home</a>
-                <a href="Page3.html">Page 3</a>
-                <a href="Page2.html">Page 2</a>
+                <a href="Page3.html">Info Hub</a>
+                <a href="Page2.html">Using Frame Data</a>
             </nav>
         </header>
         <div class="title-home">
@@ -25,7 +25,7 @@
             <p>This site displays frame data Visually display movement in time of an animation.</p>
         </div><div class="home-grid">
             <section class="info">
-                <h3>iorem</h3>   
+                <h3>WHAT IS THIS SITE?</h3>   
                 <p>This site displays frame data Visually display movement in time of an animation.</p>
                 <ul>
                     <li>The audience for this website would be for people to see information about key portions of certains frames.</li>
