--- a/PSite/Page3.html
+++ b/PSite/Page3.html
@@ -20,21 +20,69 @@
         </header>
         <div class="home-card-container">
             <div class="home-link home-grid--col3">
-            <div class="home-link__button"><a href="" title="">Overview</a></div>
-            <div class="home-link__button"><a href="" title="">Starter Guide</a></div>
-            <div class="home-link__button"><a href="" title="">Combos</a></div>
+            <div class="home-link__button"><a class="">Overview</a></div>
+            <div class="home-link__button"><a href="" title="/Nagoriyuki/Starter">Starter Guide</a></div>
+            <div class="home-link__button"><a href="" title="Nagoriyuki/Combos">Combos</a></div>
             </div>
             <div class="home-link home-grid--col3">
-            <div class="home-link__button"><a class="">Frame Data</a></div>
-            <div class="home-link__button"><a href="" title="Matchups">Matchups</a></div>
-            <div class="home-link__button"><a href="" title="Strategy">Strategy</a></div>
+            <div class="home-link__button"><a href="" title="Nagoriyuki/Strategy">Strategy</a></div>
+            <div class="home-link__button"><a href="" title="Nagoriyuki/Matchups">Matchups</a></div>
+            <div class="home-link__button"><a href="" title="Nagoriyuki/Counterstrategy">Counterstrategy</a></div>
             </div>
             <div class="home-link home-grid--col3">
-            <div class="home-link__button"><a href="" title="">Resources</a></div>
-            <div class="home-link__button"><a href="" title="">Okizeme</a></div>
-            <div class="home-link__button"><a href="" title="">Counterstrategy</a></div>
+            <div class="home-link__button"><a href="/w/GGST/Nagoriyuki/Okizeme" title="GGST/Nagoriyuki/Okizeme">Okizeme</a></div>
+            <div class="home-link__button"><a href="/w/GGST/Nagoriyuki/Frame_Data" title="GGST/Nagoriyuki/Frame Data">Frame Data</a></div>
+            <div class="home-link__button"><a href="/w/GGST/Nagoriyuki/Resources" title="GGST/Nagoriyuki/Resources">Resources</a></div>
             </div>
             </div>
+            <div class="home-card home-card--col2 home-card--row2">
+                <div class="home-card-title-large">Nagoriyuki</div>
+
+                <table class="infobox">
+                <tbody><tr><td id="portrait-image"><a href="images/390px-GGST_Nagoriyuki_Portrait.png" class="image"><img alt="GGST Nagoriyuki Portrait.png" src="images/390px-GGST_Nagoriyuki_Portrait.png"></a></td></tr>
+                <tr class="infobox-header"><td>Damage Received Mod</td></tr>
+                <tr class="infobox-data"><td>0.97</td></tr>
+                <tr class="infobox-header"><td>Guts Rating</td></tr>
+                <tr class="infobox-data"><td>4</td></tr>
+                <tr class="infobox-header"><td>Weight</td></tr>
+                <tr class="infobox-data"><td>Heavy</td></tr>
+                <tr class="infobox-header"><td>Prejump</td></tr>
+                <tr class="infobox-data"><td>5F</td></tr>
+                <tr class="infobox-header"><td>Backdash</td></tr>
+                <tr class="infobox-data"><td>23/1~6 strike invuln/1~16 airborne</td></tr>
+                <tr class="infobox-header"><td>Unique Movement Options</td></tr>
+                <tr class="infobox-header"><td>Fastest Attack</td></tr>
+                <tr class="infobox-data"><td><a href="#5P">5P</a> (5F)</td></tr>
+                <tr class="infobox-header"><td>Reversals</td></tr>
+                </tbody></table>
+                </div>
+        <div class="home-card home-card--col4 home-card--row1">
+            <div class="home-card-title-large">Overview</div>
+            <p>Nagoriyuki is a mid-ranged powerhouse who dynamically shifts between extended pressure strings which threaten strike/throw mix-ups and space control with massive normals, depending on what the Blood Rage mechanic allows. 
+            </p><p>Nagoriyuki's long and rewarding <b>Guard:</b><br>All<b>Startup:</b>
+            </p><p>Depleting the Blood Gauge by landing sword normals or by feasting with Bloodsucking Universe Blood Gauge management requires situational awareness and adeptly shifting tactics midmatch. Manage the gauge well to benefit from enhanced sword normals at high Blood levels and stellar special moves at low Blood levels.
+            </p>
+            </div>
+                <div class="home-card home-card--col4 home-card--row1">
+                    <div class="citizen-table-wrapper"><table id="ReasonsToPick-table" style="margin: 0 auto;">
+                    <tbody><tr><td colspan="2" class="ReasonsToPick-summary"><span style="white-space: nowrap;"><span class="charaLabel"><a href="Nagoriyuki" title="GGST/Nagoriyuki"><img alt="" src="images/27px-GGST_Nagoriyuki_Icon.png" ><b>Nagoriyuki</b></a></span></span> is a powerhouse with the unique ability to special-to-special cancel and high pressure strike/throw game, limited only by your creativity and the Blood gauge.</td></tr>
+                    <tr class="ReasonsToPick-header">
+                    <td style="border-bottom: 1px solid var(--border-color-base); width: 50%;">Pick if you like</td>
+                    <td style="border-bottom: 1px solid var(--border-color-base); width: 50%;">Avoid if you dislike</td>
+            
+                    <td id="picklist" class="ReasonsToPick-entry" style="width:50%; border-right: 1px solid var(--border-color-base);" vertical-align="top">Big damage</b> from any hit you land, and even more with proper situational awareness and Blood management.</li>
+                    <li>Running tight, scary strike/throw pressure with heavy rewards for getting through.</li>
+                    <li>Controlling the range of engagement with a <span class="tooltip">command dash while still applying pressure. Spacing traps galore.</li>
+                    <li>Filling the screen with huge normals that deal chip damage on block.</li></ul>
+                    </td>
+                    <td id="avoidlist" class="ReasonsToPick-entry" style="width:50%;" vertical-align="top">
+                    <ul><li>High-stakes resource management. Misuse of the Blood Gauge is usually game-losing.</li>
+                    <li>Committal, predictable air movement without the ability to change trajectory after the initial jump arc is decided.</li>
+                    <li>Resource-reliant ground mobility that makes zoners difficult to deal with at high Blood.</li></ul>
+                    </td>
+                    </tr></tbody></table></div>
+                    </div>
+        
         <footer>
             <p>FRAMECOUNTER &copy; 2023 - HAYDENSCAGGS</p>
             <p><a href="site-plan.html">Site Plan</a></p>
