Changed error in html validator

--- a/PSite/Page3.html
+++ b/PSite/Page3.html
@@ -67,15 +67,16 @@
                     <div class="citizen-table-wrapper"><table id="ReasonsToPick-table" style="margin: 0 auto;">
                     <tbody><tr><td colspan="2" class="ReasonsToPick-summary"><span style="white-space: nowrap;"><span class="charaLabel"><a href="Nagoriyuki" title="GGST/Nagoriyuki"><img alt="" src="images/27px-GGST_Nagoriyuki_Icon.png" ><b>Nagoriyuki</b></a></span></span> is a powerhouse with the unique ability to special-to-special cancel and high pressure strike/throw game, limited only by your creativity and the Blood gauge.</td></tr>
                     <tr class="ReasonsToPick-header">
-                    <td style="border-bottom: 1px solid var(--border-color-base); width: 50%;">Pick if you like</td>
-                    <td style="border-bottom: 1px solid var(--border-color-base); width: 50%;">Avoid if you dislike</td>
+                    <td style="border-bottom: 1px solid var(--border-color-base); width: 50%;"><b>Pick if you like</b></td>
+                    <td style="border-bottom: 1px solid var(--border-color-base); width: 50%;"><b>Avoid if you dislike</b></td>
+                    </tr>
             
-                    <td id="picklist" class="ReasonsToPick-entry" style="width:50%; border-right: 1px solid var(--border-color-base);" vertical-align="top">Big damage</b> from any hit you land, and even more with proper situational awareness and Blood management.</li>
+                    <ul><b><td id="picklist" class="ReasonsToPick-entry" style="width:50%; border-right: 1px solid var(--border-color-base);" valign="top">Big damage</b> from any hit you land, and even more with proper situational awareness and Blood management.</li>
                     <li>Running tight, scary strike/throw pressure with heavy rewards for getting through.</li>
                     <li>Controlling the range of engagement with a <span class="tooltip">command dash while still applying pressure. Spacing traps galore.</li>
                     <li>Filling the screen with huge normals that deal chip damage on block.</li></ul>
                     </td>
-                    <td id="avoidlist" class="ReasonsToPick-entry" style="width:50%;" vertical-align="top">
+                    <td id="avoidlist" class="ReasonsToPick-entry" style="width:50%;" valign="top">
                     <ul><li>High-stakes resource management. Misuse of the Blood Gauge is usually game-losing.</li>
                     <li>Committal, predictable air movement without the ability to change trajectory after the initial jump arc is decided.</li>
                     <li>Resource-reliant ground mobility that makes zoners difficult to deal with at high Blood.</li></ul>
